--- a/app/globals.css
+++ b/app/globals.css
@@ -77,6 +77,9 @@
 .cl-userButtonPopoverActionButton {
 	color: white;
 }
+.cl-socialButtonsProviderIcon__github {
+	filter: invert(1);
+}
 
 /* =============================== */
 
